--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --main-color: #434455;
+  --bright-color: #404bbf;
+  --tittle-color: #2e2f42;
+  --accent-color: #4d5ae5;
+}
+/* Не проходить без root автоперевірку-------------------------------------- */
 .logo {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -8,17 +15,18 @@
   line-height: 1.17;
   text-transform: uppercase;
   text-decoration: none;
-  color: #4d5ae5;
+  color: var(--accent-color);
 }
 .logo .logo-studio {
-  color: #2e2f42;
+  color: var(--tittle-color);
 }
 /* background{color: #F4F4FD} */
 
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: #434455;
+  color: var(--main-color);
+  background-color: #ffffff;
 }
 .list {
   list-style: none;
@@ -26,7 +34,7 @@ body {
 /* Header */
 .nav .link:hover,
 .nav .link:focus {
-  color: #404bbf;
+  color: var(--bright-color);
 }
 
 .nav .link {
@@ -35,7 +43,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--tittle-color);
   text-decoration: none;
 }
 
@@ -48,20 +56,20 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-  color: #434455;
+  color: var(--main-color);
 }
 .feedback-item {
   list-style: none;
 }
 .feedback .link:hover,
 .feedback .link:focus {
-  color: #404bbf;
+  color: var(--bright-color);
 }
 /* Main */
 
 /* Hero */
 .hero {
-  background-color: #2e2f42;
+  background-color: var(--tittle-color);
 }
 .hero-tittle {
   font-size: 56px;
@@ -80,12 +88,12 @@ body {
   align-items: center;
   letter-spacing: 0.04em;
   color: #ffffff;
-  background-color: #4d5ae5;
+  background-color: var(--accent-color);
 }
 .hero .pointer:hover,
 .hero .pointer:focus {
-  color: #404bbf;
-  background-color: #f4f4fd;
+  color: var(--bright-color);
+  background-color: var(--bright-color);
 }
 /* Skills */
 
@@ -96,7 +104,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--tittle-color);
   line-height: 1.07;
 }
 .skills-section .secondary-tittle {
@@ -106,9 +114,8 @@ body {
   list-style: none;
 }
 .skill-item {
-  font-size: 16px;
   line-height: 1.5;
-  color: #434455;
+  letter-spacing: 0.02em;
 }
 /* Examples */
 .examples-tittle {
@@ -116,7 +123,7 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--tittle-color);
   line-height: 1.11;
 }
 
@@ -131,13 +138,12 @@ body {
   letter-spacing: 0.02em;
   line-height: 1.11;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--tittle-color);
 }
 .specialty {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
   text-align: center;
 }
 .team-item .secondary-tittle {
@@ -146,7 +152,7 @@ body {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--tittle-color);
 }
 .team-item {
   list-style: none;
@@ -158,7 +164,7 @@ body {
 
 /* Footer */
 .footer-section {
-  background-color: #2e2f42;
+  background-color: var(--tittle-color);
 }
 .footer-item {
   color: #e7e9fc;
@@ -173,7 +179,7 @@ body {
   line-height: 1.17;
   text-transform: uppercase;
   text-decoration: none;
-  color: #4d5ae5;
+  color: var(--accent-color);
 }
 .footer-section .footer-studio {
   color: #f4f4fd;
@@ -192,13 +198,13 @@ body {
   text-align: center;
   letter-spacing: 0.04em;
   line-height: 1.5;
-  color: #4d5ae5;
+  color: var(--accent-color);
   background-color: #f4f4fd;
 }
 .portfolio-buttons .item:hover,
 .portfolio-buttons .item:focus {
   color: #ffffff;
-  background-color: #404bbf;
+  background-color: var(--bright-color);
 }
 
 .works {
@@ -208,7 +214,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 .portfolio .secondary-tittle {
   line-height: 1.2;
