--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
   --tittle-color: #2e2f42;
   --accent-color: #4d5ae5;
 }
-/* Не проходить без root автоперевірку-------------------------------------- */
 .logo {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -17,6 +16,22 @@
   text-decoration: none;
   color: var(--accent-color);
 }
+
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 1px solid red; */
+}
+
 .logo .logo-studio {
   color: var(--tittle-color);
 }
@@ -27,9 +42,12 @@ body {
   font-size: 16px;
   color: var(--main-color);
   background-color: #ffffff;
+  align-items: center;
 }
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 /* Header */
 .nav .link:hover,
@@ -66,10 +84,13 @@ body {
   color: var(--bright-color);
 }
 /* Main */
-
+main .container {
+  margin-bottom: 120px;
+}
 /* Hero */
 .hero {
   background-color: var(--tittle-color);
+  text-align: center;
 }
 .hero-tittle {
   font-size: 56px;
@@ -77,6 +98,7 @@ body {
   letter-spacing: 0.02em;
   color: #ffffff;
   line-height: 1.07;
+  margin-bottom: 48px;
 }
 .hero .pointer {
   font-family: 'Roboto', sans-serif;
@@ -89,6 +111,11 @@ body {
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: var(--accent-color);
+  min-width: 169px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  display: inline-block;
+  text-align: center;
 }
 .hero .pointer:hover,
 .hero .pointer:focus {
@@ -99,6 +126,7 @@ body {
 
 .skills-main-tittle {
   visibility: hidden;
+  margin: 0;
 }
 .secondary-tittle {
   font-weight: 500;
@@ -109,6 +137,7 @@ body {
 }
 .skills-section .secondary-tittle {
   line-height: 1.2;
+  margin-bottom: 8px;
 }
 .skills-list {
   list-style: none;
@@ -125,6 +154,7 @@ body {
   text-transform: capitalize;
   color: var(--tittle-color);
   line-height: 1.11;
+  margin-bottom: 72px;
 }
 
 /* Team */
@@ -139,6 +169,7 @@ body {
   line-height: 1.11;
   text-transform: capitalize;
   color: var(--tittle-color);
+  margin-bottom: 120px;
 }
 .specialty {
   font-size: 16px;
@@ -165,6 +196,8 @@ body {
 /* Footer */
 .footer-section {
   background-color: var(--tittle-color);
+  /* margin-top: 100px; */
+  padding-top: 100px;
 }
 .footer-item {
   color: #e7e9fc;
@@ -183,6 +216,11 @@ body {
 }
 .footer-section .footer-studio {
   color: #f4f4fd;
+}
+.footer-section .link {
+  display: inline-block;
+  padding-top: 100px;
+  margin-top: 100px;
 }
 /* -------------------Portfolio------------------------------------- */
 .portfolio-tittle {
