--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,14 @@
   --bright-color: #404bbf;
   --tittle-color: #2e2f42;
   --accent-color: #4d5ae5;
+  --white-color: #ffffff;
 }
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 24px;
   letter-spacing: 0.03em;
   line-height: 1.17;
   text-transform: uppercase;
@@ -25,11 +26,15 @@ h4 {
   margin-top: 0;
   margin-bottom: 0;
 }
+img {
+  display: block;
+}
 .container {
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
+  margin: 0 auto;
 }
 
 .logo .logo-studio {
@@ -41,7 +46,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: var(--main-color);
-  background-color: #ffffff;
+  background-color: var(--white-color);
   align-items: center;
 }
 .list {
@@ -50,12 +55,31 @@ body {
   margin: 0;
 }
 /* Header */
-.nav .link:hover,
-.nav .link:focus {
+.header .container {
+  display: flex;
+  align-items: center;
+}
+.site-nav {
+  display: flex;
+  align-items: center;
+}
+.feedback {
+  margin-left: auto;
+}
+.feedback .list {
+  flex-wrap: wrap;
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+/* Navigation----------------- */
+.nav-list .link:hover,
+.nav-list .link:focus {
   color: var(--bright-color);
 }
 
-.nav .link {
+.nav-list .link {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -63,30 +87,35 @@ body {
   letter-spacing: 0.02em;
   color: var(--tittle-color);
   text-decoration: none;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
-.feedback {
-  font-style: normal;
+.nav-list {
+  display: flex;
 }
-.feedback-item .link {
+.nav-list .item {
+}
+.nav-list .item + .item {
+  margin-left: 40px;
+}
+
+.feedback-list .link {
   font-weight: 400;
   font-size: 16px;
+  font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--main-color);
 }
-.feedback-item {
-  list-style: none;
-}
+
 .feedback .link:hover,
 .feedback .link:focus {
   color: var(--bright-color);
 }
-/* Main */
-main .container {
-  margin-bottom: 120px;
-}
+
 /* Hero */
 .hero {
   background-color: var(--tittle-color);
@@ -96,7 +125,7 @@ main .container {
   font-size: 56px;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--white-color);
   line-height: 1.07;
   margin-bottom: 48px;
 }
@@ -109,7 +138,7 @@ main .container {
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: var(--white-color);
   background-color: var(--accent-color);
   min-width: 169px;
   padding: 16px 32px;
@@ -119,7 +148,7 @@ main .container {
 }
 .hero .pointer:hover,
 .hero .pointer:focus {
-  color: var(--bright-color);
+  color: var(--white-color);
   background-color: var(--bright-color);
 }
 /* Skills */
@@ -189,15 +218,13 @@ main .container {
   list-style: none;
 }
 .team-text {
-  background-color: #ffffff;
+  background-color: var(--white-color);
   width: 264px;
 }
 
 /* Footer */
 .footer-section {
   background-color: var(--tittle-color);
-  /* margin-top: 100px; */
-  padding-top: 100px;
 }
 .footer-item {
   color: #e7e9fc;
@@ -213,14 +240,14 @@ main .container {
   text-transform: uppercase;
   text-decoration: none;
   color: var(--accent-color);
+  display: inline-block;
+  margin-bottom: 100px;
 }
 .footer-section .footer-studio {
   color: #f4f4fd;
 }
 .footer-section .link {
   display: inline-block;
-  padding-top: 100px;
-  margin-top: 100px;
 }
 /* -------------------Portfolio------------------------------------- */
 .portfolio-tittle {
@@ -241,7 +268,7 @@ main .container {
 }
 .portfolio-buttons .item:hover,
 .portfolio-buttons .item:focus {
-  color: #ffffff;
+  color: var(--white-color);
   background-color: var(--bright-color);
 }
 
