--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,8 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--main-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .feedback-list .item:first-child {
   margin-right: 40px;
@@ -160,14 +162,15 @@ body {
   background-color: var(--bright-color);
 }
 /* Skills */
-
+.skills-section {
+  padding-bottom: 120px;
+  padding-top: 120px;
+}
 .skills-main-tittle {
   visibility: hidden;
   margin: 0;
 }
-.skills-section .container {
-  padding-bottom: 120px;
-}
+
 .secondary-tittle {
   font-weight: 500;
   font-size: 20px;
@@ -196,9 +199,10 @@ body {
 }
 /* Examples */
 
-.examples .container {
+.examples {
   padding-bottom: 120px;
 }
+
 .examples-tittle {
   font-size: 36px;
   text-align: center;
@@ -217,10 +221,10 @@ body {
 /* Team */
 .team {
   background-color: #f4f4fd;
-}
-.team .container {
   padding-bottom: 120px;
+  padding-top: 120px;
 }
+
 .team-tittle {
   font-size: 36px;
   text-align: center;
@@ -259,9 +263,12 @@ body {
 /* Footer */
 .footer-section {
   background-color: var(--tittle-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
-.footer-item {
+.footer-text {
   color: #e7e9fc;
+  width: 264px;
 }
 
 .footer-section .logo {
@@ -275,24 +282,26 @@ body {
   text-decoration: none;
   color: var(--accent-color);
   display: inline-block;
-  margin-bottom: 100px;
+  margin-bottom: 16px;
 }
 .footer-section .footer-studio {
   color: #f4f4fd;
 }
-.footer-section .link {
-  display: inline-block;
-}
+
 /* -------------------Portfolio------------------------------------- */
 .portfolio-tittle {
   visibility: hidden;
 }
-.portfolio-buttons .item {
+.portfolio {
+  margin-bottom: 120px;
+}
+.portfolio-buttons .btn {
+  border-radius: 4px;
+  padding: 12px 24px;
   font-family: 'Roboto', sans-serif;
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
@@ -300,16 +309,46 @@ body {
   color: var(--accent-color);
   background-color: #f4f4fd;
 }
-.portfolio-buttons .item:hover,
-.portfolio-buttons .item:focus {
+.portfolio-buttons .item + .item {
+  margin-left: 24px;
+}
+
+.portfolio-buttons .btn:hover,
+.portfolio-buttons .btn:focus {
   color: var(--white-color);
   background-color: var(--bright-color);
 }
-
-.works {
+.portfolio-buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 72px;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfilio-list,
+img {
+  margin-bottom: 32px;
+}
+.portfolio-list .secondary-tittle,
+.work-text {
+  margin-left: 16px;
+}
+.portfolio-list .item:nth-child(3n + 1) {
+  margin-left: 0px;
+}
+.portfolio-list .item:nth-child(n + 7) {
+  margin-bottom: 0px;
+}
+.portfolio-list .item {
+  margin-left: 24px;
+  margin-bottom: 48px;
+}
+.portfolio .works {
   text-decoration: none;
 }
-.work-item {
+.work-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
