--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,8 @@ body {
   visibility: hidden;
 }
 .portfolio {
-  margin-bottom: 120px;
+  padding-bottom: 120px;
+  padding-top: 96px;
 }
 .portfolio-buttons .btn {
   border-radius: 4px;
